MPSSPRT-388 log4j.Logger->j.m.logging.Logger in [mps-platform]